src/resources/css/common/Chat.css
/*
    This file contain common stylesheet to chat widgets: chat messages, chat panel, etc.
*/


/* Buttons used to auto translate and clear all chat messages
--------------------------------------------------------------*/
#buttonAutoTranslate,
#buttonClear
{
    max-height: 22px;
    max-width: 14px;
}

#buttonClear
{
    background-image: url(:/images/broom.png);
    background-repeat: no-repeat;
    background-position: center;
}

#buttonAutoTranslate
{
    background-image: url(:/images/translate.png);
    background-repeat: no-repeat;
    background-position: center;
}

#topicLabel
{
    background-color: rgba(255, 255, 255, 20);
    padding: 3px;
}

/* Stylesheet used in chat messages widget (ChatMessagePanel).
------------------------------------------ */
ChatMessagePanel
{
    padding: 0px;
    padding-left: 3px;
    padding-right: 3px;
}

ChatMessagePanel #labelUserName /* chat message author */
{
    font-size: 10px;
    font-weight: bold;
    margin: 0px;
}

ChatMessagePanel #translateButton,
ChatMessagePanel #blockButton
{
    background-color: transparent;
}

ChatMessagePanel #translateButton, /* the small T (translate) button in right side of chat messages */
ChatMessagePanel #blockButton      /* the small B (block user in chat) button */
{
    height: 6px;
    min-height: 6px;
    padding: 2px;
    font-size: 8px;
    border: 1px solid rgba(0, 0, 0, 70);
}

ChatMessagePanel #labelMessage
{
    background-color: transparent;
    selection-background-color: rgb(51, 153, 255);
    selection-color: white;
    padding: 0px;
    margin: 0px;
    margin-top: -6px;
}

/* emoji buttons */
EmojiWidget QToolButton
{
    background-color: rgba(255, 255, 255, 45);
    border: none;
    margin: 1px;
}

/* category buttons */
EmojiWidget > QToolButton
{
    background-color: rgba(255, 255, 255, 30);
    border: none;
}

